...
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewGasoleoA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewGasoleoALabel"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/textViewGasoleoALabel"
                app:layout_constraintTop_toTopOf="@+id/textViewGasoleoALabel" />
...
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGasoleoALabel" />

            <TextView
                android:id="@+id/textViewGasoleoB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewGasoleoBLabel"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/textViewGasoleoBLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewGasoleoALabel" />
...
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGasoleoPremiumLabel" />

            <TextView
                android:id="@+id/textViewGasolina95E10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewGasolina95E10Label"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/textViewGasolina95E10Label"
                app:layout_constraintTop_toTopOf="@+id/textViewGasolina95E10Label" />
...
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGasolina98E5Label" />

            <TextView
                android:id="@+id/textViewBiodiesel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewBiodieselLabel"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/textViewBiodieselLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewBiodieselLabel" />
...
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBiodieselLabel" />

            <TextView
                android:id="@+id/textViewBioetanol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewBioetanolLabel"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/textViewBioetanolLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewBioetanolLabel" />
...
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBioetanolLabel" />

            <TextView
                android:id="@+id/textViewGasNaturalComprimido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textViewGasNaturalComprimidoLabel"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/textViewGasNaturalComprimidoLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewGasNaturalComprimidoLabel" />
...
