...
            android:text="Selecciona los filtros a utilizar en la búsqueda" />

        <Button
            android:id="@+id/btnSeleccionConfig"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/scrollTabla"
            android:layout_below="@id/textTitle"
            android:layout_alignRight="@id/textTitle"
            android:text="Seleccionar configuración" />

        <TextView
            android:id="@+id/Space"
...
                        android:background="#99FFFFFF"
                        android:orientation="horizontal">



                        <Button
                            android:id="@+id/btnCombustibles"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="Mostrar tipos"
                            tools:text="Mostrar tipos" />
                    </LinearLayout>
...
        </ScrollView>

        <Button
            android:id="@+id/btnGuardarConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnAceptar"
            android:layout_alignParentBottom="false"
            android:layout_weight="3"
            android:text="Guardar configuración"
            android:visibility="visible" />

        <Button
...
